# RunNX

./: .gitignore  .llvm-cov-exclude  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMAL_VERIFICATION.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES_0.2.0.md  UPDATE_SUMMARY.md  build.rs  cliff.toml  converter_tests.rs  coverage_improvement_plan.md  dev.sh  justfile  rustfmt.toml  test_input.json  test_onnx_support.rs
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: changelog.yml  ci.yml  coverage.yml  docs.yml  formal-verification.yml  release.yml
assets/: README.md  complex_graph.dot
benches/: cv_benchmark.rs  inference_benchmark.rs  operator_benchmark.rs
docs/: DEVELOPMENT_QA.md  FORMAT_COMPATIBILITY.md  README.md
docs/development/: setup.md
docs/guides/: benchmarking.md  cli.md  examples.md  graph-visualization.md  installation.md  quick-start.md
docs/releases/: README.md  RELEASE_NOTES_0.1.1.md
examples/: formal_verification.rs  format_conversion.rs  onnx_demo.rs  simple_model.rs  tensor_ops.rs  test_onnx_support.rs  yolo_demo.rs  yolov8_detect_and_draw.rs  yolov8_object_detection.rs  yolov8n_compat_demo.rs
formal/: Makefile  README.md  neural_network_specs.mlw  operator_specs.mlw  operator_specs_clean.mlw  operators.mlw  tensor_specs.mlw  tensors.mlw  test-verification.sh  verify.py  verify_operators.py  why3-wrapper.sh  why3session.xml
scripts/: benchmark.sh  coverage.sh  quality-check.sh  yolov8_onnx_inference.py
src/: converter.rs  error.rs  formal.rs  formal_tests.rs  graph.rs  graph_demo.rs  lib.rs  model.rs  onnx.rs  operator_property_tests.rs  operators.rs  proto.rs  runtime.rs  tensor.rs
tests/: additional_tests.rs  cli_runner_tests.rs  cli_tests.rs  converter_tests.rs  formal_tests.rs  integration_tests.rs
