[package]
name = "runnx"
version = "0.1.0"
edition = "2021"
description = "A minimal, verifiable ONNX runtime implementation in Rust"
authors = ["João Galego <jgalego1990@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JGalego/runnx"
readme = "README.md"
keywords = ["onnx", "machine-learning", "neural-network", "runtime", "inference"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { version = "0.15", features = ["serde"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = "3.3"
log = "0.4"
env_logger = "0.10"

# Optional features
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
env_logger = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = []
async = ["tokio"]

[[bench]]
name = "inference_benchmark"
harness = false

[lib]
name = "runnx"
path = "src/lib.rs"

[[bin]]
name = "runnx-runner"
path = "src/bin/runner.rs"

[[example]]
name = "simple_model"
path = "examples/simple_model.rs"
