[package]
name = "runnx"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "A minimal, verifiable ONNX runtime implementation in Rust"
authors = ["João Galego <jgalego1990@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JGalego/runnx"
readme = "README.md"
keywords = ["onnx", "machine-learning", "neural-network", "runtime", "inference"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { version = "0.16", features = ["serde"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
log = "0.4"
env_logger = "0.11"

# Optional features
tokio = { version = "1.0", features = ["full"], optional = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.8"
tokio = { version = "1.0", features = ["macros", "rt"] }
proptest = "1.4"

[features]
default = []
async = ["tokio"]

[[bench]]
name = "inference_benchmark"
harness = false

[lib]
name = "runnx"
path = "src/lib.rs"

[[bin]]
name = "runnx-runner"
path = "src/bin/runner.rs"

[[example]]
name = "simple_model"
path = "examples/simple_model.rs"
